# note_manager

./: README.md  pyproject.toml
src/: main.py
