[tool.poetry]
name = "note-manager"
version = "0.1.0"
description = ""
authors = ["ryan <exogenesis@protonmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"


click = "^8.1.7"
pytest = "^8.3.2"
python-fzf = "^0.1.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nmgr = "main:app"
