[tool.poetry]
name = "note-manager"
version = "0.1.0"
description = ""
authors = ["ryan <exogenesis@protonmail.com>"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"


pytest = "^8.3.2"
python-fzf = "^0.1.1"
typer = "^0.12.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nmgr = "main:cli"
